# SmsCatcher

./: .gitignore  CONTRIBUTING.md  CONTRIBUTING.zh-TW.md  GEMINI.md  LICENSE  README.en.md  README.md  RSM.ipynb  ReceiveSms.ipynb  Temporary_SMS_Receiver_Monitor.ipynb  config.toml  issue.MD  lang.py  main.py  public.py  pyproject.toml  scraper_core.py
.github/: FUNDING.yml  PULL_REQUEST_TEMPLATE.md
.github/workflows/: greetings.yml
static/: script.js  style.css
templates/: index.html
tests/: test_main.py  test_scraper_core.py
