[project]
name = "receivesms"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "beautifulsoup4>=4.14.2",
    "flask>=3.1.2",
    "pyngrok>=7.4.0",
    "selenium>=4.35.0",
    "tomli>=2.2.1",
    "waitress>=3.0.2",
    "webdriver-manager>=4.0.2",
]
